# bridgeX

./: LICENSE  README.md
app/: CASPER_CLICK_SIGINING_TRANSACTION_DOCS.md  CASPER_POSSIBLE_ERROR-CODES.md  CSPR_CLOD_GET_ACCOUNT_TOKEN_BALANCE.md  RAINBOW_KIT_QUICKSTART.md  SUPPORTED_CHAINS_EXPLORE_URLS.md  package.json  pnpm-lock.yaml
app/app/: client-providers.tsx  globals.css  home-client.tsx  layout.tsx  page.tsx  providers.tsx
app/app/faucet/: page.tsx
app/components/: bridge-card-single.tsx  bridge-card.tsx  casper-test-panel.tsx  chain-select-modal.tsx  evm-test-panel.tsx  faucet-card.tsx  faucet-status-card.tsx  popular-tokens.tsx  recipient-modal.tsx  token-select-modal.tsx  transaction-status-modal.tsx  transactions-card.tsx
app/contexts/: casper-client-config-context.tsx  casper-transactions-context.tsx  casper-wallet-context.tsx  evm-client-config-context.tsx  evm-wallet-context.tsx  relayer-catalog-context.tsx
app/hooks/: use-bridge-transaction.ts  use-evm-bridge.ts
app/lib/: amount.ts  config.ts  explorer.ts  recipient.ts  transaction-errors.ts
app/lib/casper/: deploy.ts  format.ts  relayer.ts  (+1 more)
contracts/casper/bridge-core/: .gitignore  CHANGELOG.md  Cargo.toml  DEVNote.md  Odra.toml  README.md
contracts/casper/bridge-core/src/: bridge_core.rs  bridge_core_tests.rs  lib.rs  wrapped_cep18.rs
contracts/evm/: .env  DEV-NOTES.md  TEST_TOKENS.ts  TOKENS.md  hardhat.config.ts  package.json  pnpm-lock.yaml
relayer/: .env.local  DevNote.md  FEATURS.md  PROTOCOL_OVERVIEW.md  README.md  RELAYER_ARCHITECTURE.md  SUPPOETED_CHAINS_AND_TOKENS.md  index-copy.ts  package.json  pnpm-lock.yaml  render.yaml
relayer/prisma/: schema.prisma  seed.ts
(+167 files in other folders)
